<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Factura">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_secondary"
        android:text="@string/generar_pdf"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_secondary"
        android:text="@string/volver"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/club_deportivo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/mi_club"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/mi_club"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/logo_mi_club_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dni_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/dni"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dni_field"
                android:layout_width="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_22334565"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/nombre"
                android:textSize="16sp"
                android:textStyle="bold" />
                <TextView
                android:id="@+id/nombre_field"
                android:paddingHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/faustina"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/descripcionFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Detalles del pago"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apellido_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/apellido"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/apellido_field"
                android:paddingHorizontal="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/romero"
                android:textSize="16sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/actividades_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/actividades"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actividades_field"
            android:layout_width="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/pilates_musculaci_n"
            android:textSize="16sp"
            android:layout_height="0dp"/>
    </LinearLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="183dp"
            android:paddingHorizontal="16dp"
            tools:layout_editor_absoluteY="597dp" >
            <RadioButton
                android:id="@+id/efectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/efectivo_10_descuento"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="559dp" />
            <RadioButton
                android:id="@+id/tarjeta_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarjeta_1_pago_sin_inter_s"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="559dp" />
            <RadioButton
                android:id="@+id/tarjeta_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarjeta_3_pagos_sin_inter_s"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="559dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/secondary">

            </FrameLayout>
        </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:text="@string/_3342"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/secondary"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        tools:layout_editor_absoluteX="1dp">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>