<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#658A82"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_sesdf" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded"
        android:elevation="4dp"
        android:text="@string/login"
        app:circularflow_angles="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@drawable/input_login"
        android:ems="10"
        android:hint="  Usuario"
        android:inputType="text"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/login_passw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_passw"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_login"
        android:ems="10"
        android:hint="  Contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/app_name"
        android:layout_width="196dp"
        android:layout_height="182dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_removebg_preview__15_" />



</androidx.constraintlayout.widget.ConstraintLayout>